--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,15 @@
-== 0.0.1 2007-10-25
+== 0.1.5 2007-10-31
 
-* 1 major enhancement:
-  * Initial release
+* Append -1 to all version dependencies so version requirements like (= 1.4.4) become (= 1.4.4-1) and can be met
+
+== 0.1.4 2007-10-31
+
+* Fixed a bug in the monkey-patching of Gem.bindir so that bin install should work again
+
+== 0.1.3 2007-10-31
+
+* Improved the bin/dpkg-gem so it runs when called from Rubygems' generated wrapper script
+
+== 0.1.2 2007-10-30
+
+* Initial release
