--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.1.6 2007-10-31
+
+* Allow spec.platform to be nil (as with bluecloth)
+
 == 0.1.5 2007-10-31
 
 * Append -1 to all version dependencies so version requirements like (= 1.4.4) become (= 1.4.4-1) and can be met
