--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.2.3 2007-11-20
+
+* Tweak to make sure config/deb.yml is created
+
 == 0.2.2 2007-11-20
 
 * Added Rails apache 2.2 / mod_proxy_balancer to the supported packages
