--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.2.5 2007-11-20
+
+* Changes (under the hood) to the way control files are generated
+
 == 0.2.3 2007-11-20
 
 * Tweak to make sure config/deb.yml is created
