--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,11 @@
+== 0.2.17 2008-01-15
+
+* Added the ruby .deb to the base deps for rails packages (otherwise only ruby18 is there)
+
+== 0.2.16 2008-01-07
+
+* Fixed a problem where directories were treated as files in dpkg-rails
+
 == 0.2.15 2007-12-14
 
 * Modified maintainer scripts for controlled modification of sudoers
