--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.2.18 2008-01-15
+
+* Making dpkg:setup:reset more robust in its error checking
+
 == 0.2.17 2008-01-15
 
 * Added the ruby .deb to the base deps for rails packages (otherwise only ruby18 is there)
