--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,11 @@
+== 0.2.20 2008-01-18
+
+* Tweaks to mongrel startup script
+
+== 0.2.19 2008-01-17
+
+* refactor Gem::Format creation so that Package::Builder can cope with old formats 
+
 == 0.2.18 2008-01-15
 
 * Making dpkg:setup:reset more robust in its error checking
