--- a/CHANGES
+++ b/CHANGES
@@ -1,59 +1,83 @@
-== 0.3.3 2008-06-06
+== Version 0.3.3
+
+2008-06-06: Initial Rubyforge release, lots of rough edges around the process (and the software)
 
 * Initial release at Rubyforge
 * Lots of reorganisation of the release infrastructure, which I have been looting wholesale from RSpec.
 
-== 0.3.0 2008-05-08
+== Version 0.3.0
+
+2008-05-08
 
 * Plenty tweaks to Rails startup scripts, added dpkg-etc for config. package generation
 
-== 0.2.20 2008-01-18
+== Version 0.2.20
+
+2008-01-18
 
 * Tweaks to mongrel startup script and corresponding data 
   values in DpkgTools::Package::Rails::Data
 
-== 0.2.19 2008-01-17
+== Version 0.2.19
+
+2008-01-17
 
 * refactor Gem::Format creation so that Package::Builder can 
   cope with old formats 
 
-== 0.2.18 2008-01-15
+== Version 0.2.18
+
+2008-01-15
 
 * Making dpkg:setup:reset more robust in its error checking
 
-== 0.2.17 2008-01-15
+== Version 0.2.17
+
+2008-01-15
 
 * Added the ruby .deb to the base deps for rails packages 
   (otherwise only ruby18 is there)
 
-== 0.2.16 2008-01-07
+== Version 0.2.16
+
+2008-01-07
 
 * Fixed a problem where directories were treated as files 
   in dpkg-rails
 
-== 0.2.15 2007-12-14
+== Version 0.2.15
+
+2007-12-14
 
 * Modified maintainer scripts for controlled modification of 
   sudoers
 * Modified Rails setup tasks so they can be re-run on an app 
   from Rake
 
-== 0.2.14 2007-12-04
+== Version 0.2.14
+
+2007-12-04
 
 * Modified maintainer scripts to make them tidy up
   after themselves a bit better
 * Added username to deploy.rb
 
-== 0.2.13 2007-12-04
+== Version 0.2.13
+
+2007-12-04
 
 * Includes modified Capistrano deployment recipes
 * Generates the ssh authorized_keys file in a Rails package
 
-== 0.2.12 2007-12-01
+== Version 0.2.12
+
+2007-12-01
 
 * postinst quotes the MySQL strings correctly now.
 
-== 0.2.11 2007-12-01
+== Version 0.2.11
+
+2007-12-01
 
 * Refactored out the Rake build tasks stuff to DRY it up a bit
 * Made certain things happen more in accordance with debian policy 
@@ -62,77 +86,113 @@
   properly (i.e. only one)
 * postinst and comrades actually have the right names now
 
-== 0.2.10 2007-12-01
+== Version 0.2.10
+
+2007-12-01
 
 * Tweaks to base package list for rails apps
 
-== 0.2.9 2007-12-01
+== Version 0.2.9
+
+2007-12-01
 
 * Copes with nil values in Gem::Format.files (thanks, mysql...)
 * Also looks for COPYING to contain the license info
 
-== 0.2.8 2007-12-01
+== Version 0.2.8
+
+2007-12-01
 
 * Maintains a list of -dev packages for gems which need to compile 
   against them and adds those to build-time dependencies as 
   appropriate
 
-== 0.2.7 2007-11-25
+== Version 0.2.7
+
+2007-11-25
 
 * Nasty bug with hold-out from before refactoring squished
 
-== 0.2.6 2007-11-25
+== Version 0.2.6
+
+2007-11-25
 
 * Maintainer scripts are in
 
-== 0.2.5 2007-11-20
+== Version 0.2.5
+
+2007-11-20
 
 * Changes (under the hood) to the way control files are generated
 
-== 0.2.3 2007-11-20
+== Version 0.2.3
+
+2007-11-20
 
 * Tweak to make sure config/deb.yml is created
 
-== 0.2.2 2007-11-20
+== Version 0.2.2
+
+2007-11-20
 
 * Added Rails apache 2.2 / mod_proxy_balancer to the supported packages
 
-== 0.1.11 2007-11-13
+== Version 0.1.11
+
+2007-11-13
 
 * Fix bug in dependency name generation for debian/control
 
-== 0.1.10 2007-11-13
+== Version 0.1.10
+
+2007-11-13
 
 * Fix generation of deb_filename
 
-== 0.1.9 2007-11-13
+== Version 0.1.9
+
+2007-11-13
 
 * Fix bad changelog and control file generation
 
-== 0.1.8 2007-11-13
+== Version 0.1.8
+
+2007-11-13
 
 * Correctly handle gems which have underscores or capitalisation in their names
 
-== 0.1.7 2007-10-31
+== Version 0.1.7
+
+2007-10-31
 
 * Correctly handle gems which need to be parsed with Gem::OldFormat
 
-== 0.1.6 2007-10-31
+== Version 0.1.6
+
+2007-10-31
 
 * Allow spec.platform to be nil (as with bluecloth)
 
-== 0.1.5 2007-10-31
+== Version 0.1.5
+
+2007-10-31
 
 * Append -1 to all version dependencies so version requirements like (= 1.4.4) become (= 1.4.4-1) and can be met
 
-== 0.1.4 2007-10-31
+== Version 0.1.4
+
+2007-10-31
 
 * Fixed a bug in the monkey-patching of Gem.bindir so that bin install should work again
 
-== 0.1.3 2007-10-31
+== Version 0.1.3
+
+2007-10-31
 
 * Improved the bin/dpkg-gem so it runs when called from Rubygems' generated wrapper script
 
-== 0.1.2 2007-10-30
+== Version 0.1.2
+
+2007-10-30
 
 * Initial release
